react-router-dom implents

--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,7 +1,7 @@
 .item__card{
     width: 22.5%;
     margin: 1rem 0;
-    padding: 0  .5rem;
+    padding: .5rem;
     overflow: hidden;
     border: 1px solid #ccc;
     border-radius: .5rem;
@@ -26,20 +26,39 @@
 }
 
 .item__title{
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--font-primary);
     font-size: 1rem;
     margin: .25rem 0;
 }
 
 .item__brand{
-    font-family: 'BioRhyme', serif;
+    font-family: var(--font-secondary);
     color: gray;
     font-size: 1rem;
     margin: .25rem 0;
 }
 
 .item__price{
-    font-family: 'Overpass', sans-serif;
+    font-family: var(--font-tertiary);
     color: gray;
     font-size: 1rem;
+}
+
+.viewMore__btn{
+    width: 100%;
+    padding: 4px;
+    font-size: 1rem;
+    color: #0d6efd;
+    border: 1px solid #0d6efd;
+    border-radius: .5rem;
+    transition: all 300ms;
+}
+
+.viewMore__btn:hover{
+    color: white;
+    background-color: #0d6efd;
+}
+
+.viewMore__btn:active{
+    transform: translateY(2px);
 }
