--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -2,8 +2,6 @@
     margin: 0 auto;
     width: 95%;
     padding: 1rem;
-    border: 1px solid #ccc;
-    border-radius: .5rem;
 }
 
 .itemTitle{
@@ -16,4 +14,5 @@
 
 .itemDescription{
     font-family: 'Overpass', sans-serif;
+    text-align: justify;
 }
