--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -16,3 +16,26 @@
     font-family: 'Overpass', sans-serif;
     text-align: justify;
 }
+
+.goCartBtn{
+    width: 100%;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    border: 1px solid #198754;
+    border-radius: 0.5rem;
+    background-color: white;
+    transition: all 300ms;
+}
+
+.goCartBtn .link{
+    text-decoration: none;
+    color: #198754;
+}
+
+.goCartBtn:hover{
+    background-color: #198754;
+}
+
+.goCartBtn:hover .link{
+    color: white;
+}
