--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -51,6 +51,7 @@
     color: #0d6efd;
     border: 1px solid #0d6efd;
     border-radius: .5rem;
+    background-color: white;
     transition: all 300ms;
 }
 
