--- a/src/components/CartDetail/CartDetail.module.css
+++ b/src/components/CartDetail/CartDetail.module.css
@@ -1,6 +1,7 @@
 .itemCard{
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: .5rem;
   margin: 1rem;
   border: 1px solid #ccc;
@@ -32,4 +33,22 @@
 .itemBrand{
   font-size: 18px;
   font-family: var(--font-secondary);
+}
+
+.btn{
+  padding: 1rem;
+  margin: 0 .5rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: .5rem;
+  transition: all 300ms;
+}
+
+.btn:hover{
+  border-color: #DC3545;
+  box-shadow: 8px 8px 8px 0px rgba(0,0,0,0.3);
+}
+
+.btn:active{
+  transform: translateY(2px);
 }
