Improvements of perfomarnce

--- a/src/components/CartDetail/CartDetail.module.css
+++ b/src/components/CartDetail/CartDetail.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   padding: .5rem;
-  margin: 1rem;
+  margin-top: 1rem;
   border: 1px solid #ccc;
   border-radius: .5rem;
   transition: all 300ms;
