--- a/src/components/ItemCount/ItemCount.module.css
+++ b/src/components/ItemCount/ItemCount.module.css
@@ -5,7 +5,7 @@
 .itemQuantContainer {
   align-self: flex-end;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 0 0;
 }
 
 .itemQuant {
@@ -31,7 +31,7 @@
 .addCartBtn {
   width: 100%;
   padding: 0.5rem;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 0;
   border: 1px solid var(--color-primary);
   border-radius: 0.5rem;
   color: var(--color-primary);
