--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -20,7 +20,7 @@
 .goCartBtn{
     width: 100%;
     padding: 0.5rem;
-    margin: 0.5rem 0;
+    margin: 0.5rem 0 0;
     color: #198754;
     border: 1px solid #198754;
     border-radius: 0.5rem;
