--- a/src/components/CartDetail/CartDetail.module.css
+++ b/src/components/CartDetail/CartDetail.module.css
@@ -8,12 +8,18 @@
   border: 1px solid #ccc;
   border-radius: .5rem;
   transition: all 300ms;
+
+  position: relative;
 }
 
 .itemCard:hover{
   transform: scale(1.02);
   border-color: #0d6efd;
   box-shadow: 8px 8px 8px 0px rgba(0,0,0,0.3);
+}
+
+.itemCard:hover .btn{
+  display: block;
 }
 
 .itemImg{
@@ -37,17 +43,20 @@
 }
 
 .btn{
-  padding: 1rem;
   margin: 0 .5rem;
-  background-color: white;
-  border: 1px solid #ccc;
-  border-radius: .5rem;
-  transition: all 300ms;
+  border: none;
+  background: none;
+  transform: rotate(45deg);
+  transition: color 300ms;
+
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .btn:hover{
-  border-color: #DC3545;
-  box-shadow: 8px 8px 8px 0px rgba(0,0,0,0.3);
+  color: #DC3545;
 }
 
 .btn:active{
