--- a/src/components/CartDetail/CartDetail.module.css
+++ b/src/components/CartDetail/CartDetail.module.css
@@ -43,6 +43,7 @@
 }
 
 .btn{
+  font-size: 1.5rem;
   margin: 0 .5rem;
   border: none;
   background: none;
@@ -60,5 +61,5 @@
 }
 
 .btn:active{
-  transform: translateY(2px);
+  color: #A83526;
 }
