--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,7 +1,9 @@
 .item__card{
     width: 22.5%;
+    margin: 1rem .5rem 0;
     padding: .5rem;
     overflow: hidden;
+    background-color: white;
     border: 1px solid #ccc;
     border-radius: .5rem;
     text-align: center;
