--- a/src/components/ItemCount/ItemCount.module.css
+++ b/src/components/ItemCount/ItemCount.module.css
@@ -11,6 +11,7 @@
 .itemQuant {
   padding: 0.5rem;
   width: 100%;
+  background-color: white;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
   color: black;
