--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -1,9 +1,7 @@
 .prods__container{
-    width: 95vw;
-    margin: 0 auto;
+    width: 95%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 15px;
 }
