--- a/src/components/CartDetail/CartDetail.module.css
+++ b/src/components/CartDetail/CartDetail.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   padding: .5rem;
   margin-top: 1rem;
+  background-color: white;
   border: 1px solid #ccc;
   border-radius: .5rem;
   transition: all 300ms;
