--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,6 +1,6 @@
 .item__card{
     width: 22.5%;
-    margin: 1rem .5rem 0;
+    margin: .5rem;
     padding: .5rem;
     overflow: hidden;
     background-color: white;
