--- a/src/components/CartDetail/CartDetail.module.css
+++ b/src/components/CartDetail/CartDetail.module.css
@@ -4,11 +4,11 @@
   justify-content: space-between;
   padding: .5rem;
   margin-top: 1rem;
-  background-color: white;
+  background-color: rgba(255,255,255,0.2);
+  backdrop-filter: blur(3px);
   border: 1px solid #ccc;
   border-radius: .5rem;
   transition: all 300ms;
-
   position: relative;
 }
 
