--- a/src/components/TrackerDetail/TrackerDetail.module.css
+++ b/src/components/TrackerDetail/TrackerDetail.module.css
@@ -2,13 +2,15 @@
   display: flex;
   margin: .5rem 0;
   padding: .5rem;
-  background-color: white;
+  background-color: rgba(255,255,255,0.2);
+  backdrop-filter: blur(3px);
   border: 1px solid black;
   border-radius: .5rem;
   overflow: hidden;
 }
 
 .itemImg{
+  height: 5rem;
   margin-right: .5rem;
 }
 
