--- a/src/components/TrackerDetail/TrackerDetail.module.css
+++ b/src/components/TrackerDetail/TrackerDetail.module.css
@@ -9,6 +9,12 @@
   overflow: hidden;
 }
 
+.itemCard:hover{
+  border-color: #0d6efd;
+  box-shadow: 8px 8px 8px 0px rgba(0,0,0,0.3);
+}
+
+
 .itemImg{
   height: 5rem;
   margin-right: .5rem;
