Item detail styles

--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -2,6 +2,9 @@
     margin: 0 auto;
     width: 95%;
     padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .itemTitle{
@@ -15,6 +18,11 @@
 .itemDescription{
     font-family: 'Overpass', sans-serif;
     text-align: justify;
+}
+
+.itemImg{
+    width: 50%;
+    align-self: center;
 }
 
 .goCartBtn{
