--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
